--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lucide-react": "^0.553.0",
     "next": "15.5.5",
     "nodemailer": "^7.0.9",
     "react": "19.1.0",
