--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@hookform/resolvers": "^5.2.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
-    "next": "15.5.5",
+    "next": "^16.0.7",
     "nodemailer": "^7.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
